...
        android:src="@drawable/bkg_oval"
        tools:tint=".tasks.json/data/backgroundTint"
        android:layout_alignParentLeft="true" />


    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
...
